compiler/tools/fpp-check/test/tlm_packets/channel_neither_used_nor_omitted.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/channel_neither_used_nor_omitted.fpp:5.3
  telemetry packets P {
  ^
error: invalid telemetry packet set P
telemetry channel c1.T is neither used nor marked as omitted

component instance is specified here:
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/channel_neither_used_nor_omitted.fpp:3.3
  instance c1
  ^

telemetry channel is specified here:
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/instances.fpp:15.3
  telemetry T: U32
  ^
